tarpc/tests/compile_fail/tarpc_service_derive_serde.rs
#[tarpc::service(derive_serde = loop {})]
trait World {
    async fn hello();
}

fn main() {}
